--- a/recipies/tonkatsu-ramen.html
+++ b/recipies/tonkatsu-ramen.html
@@ -10,10 +10,53 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="recipes.css">
     </head>
-    <body>
+    <img>
        <h1>Tonkotsu Shoyu Ramen</h1>
+       <img src="../assets/Easy Tonkotsu 25 copy-X3.jpeg"/>
+       <h2 id="description">Pork Cutlet Soy Sauce Ramen</h2>
+        <p>If you have ever wanted to make Japanese noodle house ramen, this tonkatsu recipe is for you. This everyday meal is
+        great for singles with some cooking experience; it may take longer than the overall time without cooking experience. To
+        save time, I rarely measure each ingredient's amount due to the large number of small measurements in the recipe.</p>
+
+        <h2 id="ingredients">Ingredients</h2>
+        <ul>
+            <li>1 large egg</li>
+            <li>1 ½ teaspoons spicy sesame oil 2</li>
+            <li>2 (1x3-inch) boneless pork chop slices</li>
+            <li>2 tablespoons olive oil, divided</li>
+            <li>1 tablespoon black sesame seeds, divided</li>
+            <li>2 leaves fresh basil, chopped, divided</li>
+            <li>1 leaf fresh sage, chopped, divided</li>
+            <li>1 (3 ounce) package instant ramen noodles (such as Shirakiku®), seasoning packet discarded</li>
+            <li>3 tablespoons shredded dried kombu</li>
+            <li>1 ¾ tablespoons bonito soup stock (such as Hondashi®)</li>
+            <li>1 ¾ tablespoons soy sauce (shoyu)</li>
+            <li>½ teaspoon white miso paste with dashi</li>
+        </ul>
+
+        <h2 id="steps">Steps</h2>
+        <ol>
+            <li>Fill a small pot halfway with water. Bring to a boil; add egg and cook in boiling water for 15 minutes. Drain. Run cold
+            water over egg and set aside to cool.</li>
+
+            <li>Pour sesame oil into a large skillet. Lay pork slices in oil. Cover pork with 1 tablespoon olive oil, 1/2 tablespoon
+            sesame seeds, 1/2 of the basil, and 1/2 of the sage. Flip and cover pork with these remaining ingredients: 1 tablespoon
+            olive oil, 1/2 tablespoon sesame seeds, basil, and sage.</li>
+
+            <li>Cook pork, covered, over medium-low heat, until evenly browned on the bottom, about 5 minutes. Flip and continue cooking
+            until second side is browned, about 5 minutes more. Remove from heat.</li>
+
+            <li>Bring a large pot of water to a boil. Cook ramen noodles in boiling water until tender, about 3 minutes. Drain in a
+            colander set in the sink; rinse noodles until water runs clear. Return noodles to the pot.</li>
+
+            <li>Stir kombu, bonito stock, soy sauce, and miso paste into noodles. Cook, stirring with chopsticks, over medium heat,
+            until miso paste is dissolved, 3 to 5 minutes. Transfer noodles to a serving bowl.</li>
+
+            <li>Peel and cut egg in half lengthwise. Place egg, pork slices, and fish paste slices over noodles. Garnish with tonkatsu
+            sauce, ginger, green onion, and black pepper.</li>
+        </ol>
         
         <script src="" async defer></script>
     </body>
