--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="recipes.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>Odin Recipies</h1>
         <ul>
             <li><a href="./recipies/tonkatsu-ramen.html" id="ramen">Tonkatsu Ramen</a></li>
+            <li><a href="./recipies/flank-steak.html" id="ramen">Flank Steak</a></li>
+            <li><a href="./recipies/miso-soup.html" id="ramen">Miso Soup</a></li>
         </ul>
         <script src="" async defer></script>
     </body>
