CSS work, working with page colors

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="./CSS/index.css">
     </head>
     <body>
+        <div id="title-div">
         <h1>Odin Recipies</h1>
+        </div>
         <ul>
             <li><a href="./recipies/tonkatsu-ramen.html" id="ramen">Tonkatsu Ramen</a></li>
             <li><a href="./recipies/flank-steak.html" id="ramen">Flank Steak</a></li>
