--- a/index.html
+++ b/index.html
@@ -4,23 +4,51 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./CSS/index.css">
-    </head>
-    <body>
-        <div id="title-div">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./CSS/index.css">
+</head>
+
+<body>
+    <div id="title-div">
         <h1>Odin Recipies</h1>
+        <h2>Check out our Recipies</h2>
+    </div>
+
+    <ul>
+
+        <div id="recipie-div">
+            <li>
+                <div id="image-div">
+                    <img src="./assets/Easy Tonkotsu 25 copy-X3.jpeg" alt="ramen image">
+                </div>
+                <a href="./recipies/tonkatsu-ramen.html" id="ramen">Tonkatsu Ramen</a>
+            </li>
         </div>
-        <ul>
-            <li><a href="./recipies/tonkatsu-ramen.html" id="ramen">Tonkatsu Ramen</a></li>
-            <li><a href="./recipies/flank-steak.html" id="ramen">Flank Steak</a></li>
-            <li><a href="./recipies/miso-soup.html" id="ramen">Miso Soup</a></li>
-        </ul>
-        <script src="" async defer></script>
-    </body>
+
+        <div id="recipie-div">
+            <li>
+                <div id="image-div"> 
+                <img src="./assets/flank-steak.jpg" alt="flank steak image">
+                </div>
+                <a href="./recipies/flank-steak.html" id="flank-steak">Flank Steak</a>
+            </li>
+        </div>
+
+        <div id="recipie-div">
+            <li>
+                <img src="./assets/Miso-soup.jpg" alt="miso soup image">
+                <a href="./recipies/miso-soup.html" id="miso">Miso Soup</a>
+            </li>
+        </div>
+
+    </ul>
+    <script src="" async defer></script>
+</body>
+
 </html>`
