aligning my recipie items as a 3 column grid

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div id="recipie-div">
             <li>
                 <div id="image-div"> 
-                <img src="./assets/flank-steak.jpg" alt="flank steak image">
+                    <img src="./assets/flank-steak.jpg" alt="flank steak image">
                 </div>
                 <a href="./recipies/flank-steak.html" id="flank-steak">Flank Steak</a>
             </li>
@@ -42,8 +42,11 @@
 
         <div id="recipie-div">
             <li>
-                <img src="./assets/Miso-soup.jpg" alt="miso soup image">
+                <div id="image-div">
+                    <img src="./assets/Miso-soup.jpg" alt="miso soup image">
+                </div>
                 <a href="./recipies/miso-soup.html" id="miso">Miso Soup</a>
+
             </li>
         </div>
 
