pivoting to images to help give my webpage life

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
 <body>
     <div id="title-div">
+        <div id="title-text">
         <h1>Odin Recipies</h1>
         <h2>Check out our Recipies</h2>
+        </div>
     </div>
 
     <ul>
@@ -45,7 +47,7 @@
                 <div id="image-div">
                     <img src="./assets/Miso-soup.jpg" alt="miso soup image">
                 </div>
-                <a href="./recipies/miso-soup.html" id="miso">Miso Soup</a>
+                    <a href="./recipies/miso-soup.html" id="miso">Miso Soup</a>
 
             </li>
         </div>
