design changes and standardization

--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
 
 <body>
     <div id="title-div">
-        <div id="title-text">
         <h1>Odin Recipies</h1>
-        <h2>Check out our Recipies</h2>
-        </div>
     </div>
 
+    <h2 id="recipe-title">Check out our Menu!</h2>
     <ul>
-
         <div id="recipie-div">
             <li>
                 <div id="image-div">
