adjusting recipe displays

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 
 <body>
     <div id="title-div">
-        <h1>Odin Recipies</h1>
+        <div id="title-text">
+            <span><h1>ODIN's RECIPIES</h1></span>
+        </div>
     </div>
 
-    <h2 id="recipe-title">Check out our Menu!</h2>
+
     <ul>
         <div id="recipie-div">
             <li>
                 <div id="image-div">
-                    <img src="./assets/Easy Tonkotsu 25 copy-X3.jpeg" alt="ramen image">
+                    <img src="./assets/ramen-fire.jpg" alt="ramen image">
                 </div>
                 <a href="./recipies/tonkatsu-ramen.html" id="ramen">Tonkatsu Ramen</a>
             </li>
