working with page backgrounds

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
     </div>
 
 
+    <div id="recipie-div">
+        <div id="menu-title">
+            <h2>Order When You're Ready</h2>
+        </div>
     <ul>
-        <div id="recipie-div">
+        <div id="recipie-list">
             <li>
                 <div id="image-div">
                     <img src="./assets/ramen-fire.jpg" alt="ramen image">
@@ -32,7 +36,7 @@
             </li>
         </div>
 
-        <div id="recipie-div">
+        <div id="recipie-list">
             <li>
                 <div id="image-div"> 
                     <img src="./assets/flank-steak.jpg" alt="flank steak image">
@@ -41,7 +45,7 @@
             </li>
         </div>
 
-        <div id="recipie-div">
+        <div id="recipie-list">
             <li>
                 <div id="image-div">
                     <img src="./assets/Miso-soup.jpg" alt="miso soup image">
@@ -52,6 +56,8 @@
         </div>
 
     </ul>
+
+    </div>
     <script src="" async defer></script>
 </body>
 
